--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,11 +3,10 @@
 * {
   box-sizing: border-box;
 }
-a{
+a {
   text-decoration: none;
   color: inherit;
 }
-
 
 header {
   position: fixed;
@@ -15,12 +14,18 @@ header {
   left: 0;
   width: 100%;
   z-index: 1;
-  background-color: tomato;
-  
-  .header__nav{
+  background-color: rgba(255, 255, 255, 0.3);
+
+  .header__nav {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     height: 60px;
+
+    h1 {
+      font-size: 30px;
+      text-transform: uppercase;
+    }
 
     * {
       display: flex;
@@ -28,13 +33,14 @@ header {
     }
 
     .header__nav-first,
-    .header__nav-second{
+    .header__nav-second {
+      height: 100%;
       padding: 30px 20px;
       &:hover {
         background-color: #dcdcdc;
       }
     }
-    
+
     .header__nav-first {
       width: 66.6%;
       a {
@@ -44,13 +50,13 @@ header {
         color: gray;
         margin-right: 30px;
       }
-    
+
       h1:hover {
-        transition: ease-in-out 0,2s;
+        transition: ease-in-out 0, 2s;
         color: gray;
       }
       span:hover {
-        transition: ease-in-out 0,2s;
+        transition: ease-in-out 0, 2s;
         color: black;
       }
     }
@@ -59,37 +65,52 @@ header {
       span {
         margin-right: 50px;
       }
-      span:last-child{
+      span:last-child {
         position: fixed;
         right: 0;
       }
-     
     }
   }
 }
 main {
   display: grid;
-  grid-template-columns: repeat(3,1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: 50vh;
-  margin-top: 70px;
-  
+  margin-top: 60px;
+
   article {
     display: grid;
     height: 100%;
-    grid-template-rows: 5fr 1fr;
-    
+    grid-template-rows: 5fr 60px;
     object-fit: cover;
-    img{
+    img {
       overflow: hidden;
       height: 100%;
       min-width: 100%;
+      cursor: pointer;
+      transition: ease-in-out 0.4s;
+      &:hover {
+        scale: 1.03;
+        transition: ease-in-out 0.4s;
+      }
     }
-    div{
+    div {
       display: flex;
       align-items: center;
-      padding-left: 10px;
       text-transform: uppercase;
-      background-color: thistle;
+      & > * {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 33.3%;
+        height: 60px;
+        transition: ease-in-out 0.3s;
+      }
+      & > *:hover {
+        transition: ease-in-out 0.3s;
+        color: white;
+        background-color: gray;
+      }
     }
   }
 }
